--- a/.gitignore
+++ b/.gitignore
@@ -15,6 +15,7 @@ media
 .idea
 .gitmessage.txt
 model.h5
+dataset
 
 # If your build process includes running collectstatic, then you probably don't need or want to include staticfiles/
 # in your Git repository. Update and uncomment the following line accordingly.
